[package]
name = "steward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
prost-types = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tonic = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
socket2 = { version = "0.4", features = ["all"] }

log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"]}

redis = { version = "0.22", features = ["tokio-comp"] }

rayon = "1"

[build-dependencies]
tonic-build = "0.6"
