[package]
name = "steward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gRPC
tonic = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
socket2 = { version = "0.4", features = ["all"] }

# http
reqwest = { version = "0.11", features = ["json"] }

# Database
redis = { version = "0.22", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobufs
prost = "0.9"
prost-types = "0.9"

# Parallelism
rayon = "1"
crossbeam = "0.8"

# Reading config from disk
config = "0.13"

# Logging
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"]}

# Metrics
cadence = "0.29"

[build-dependencies]
tonic-build = "0.6"
