[tool.poetry]
name = "limiter-scripts"
version = "0.1.0"
description = ""
authors = ["Vasilios Syrakis <cetanu@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
structlog = "^22.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
